--- a/styles/CreatePollCard.module.css
+++ b/styles/CreatePollCard.module.css
@@ -23,6 +23,7 @@
   .createPollPage{
     width: 100%;
     height: 100vh;
+    background-color: #FAFAFA;
   }
   .createCard{
     width: 100%;
@@ -138,7 +139,7 @@
 .linkOuterContainer{
   margin-top: 20px;
   width: 100%;
-  background-color: rgb(224, 224, 224);
+  background-color:#EEEEEE;
   padding: 10px;
   border-radius: 5px;
 }
@@ -153,6 +154,21 @@
   padding: 5px;
   border-radius: 5px;
   overflow: scroll;
+  overflow-y: hidden;
+}
+
+.linkInnerContainer::-webkit-scrollbar {
+  height: 5px;
+}
+
+.linkInnerContainer::-webkit-scrollbar-track {
+  background-color: white;
+  border-radius: 10px;
+}
+
+.linkInnerContainer::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #63ec71; 
 }
 
 .shareCopyButtonContainer{
@@ -168,6 +184,15 @@
   padding: 5px;
   border: #1ECE30 2px solid;
 }
+
+
+
+@media only screen and (max-width: 500px){
+  .linkOuterContainer{
+    width: 90%;
+  }
+}
+
 
 .spinnerContainer{
   width: 100%;
